--- a/repo-conf/pacman-x86_64.conf
+++ b/repo-conf/pacman-x86_64.conf
@@ -74,10 +74,12 @@ CheckSpace
 [core]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
+Include = /etc/pacman.d/german-mirror
 
 [extra]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
+Include = /etc/pacman.d/german-mirror
 
 #[community-testing]
 #SigLevel = PackageRequired
@@ -86,6 +88,7 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
+Include = /etc/pacman.d/german-mirror
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
@@ -97,6 +100,7 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
+Include = /etc/pacman.d/german-mirror
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
