replaced include with server line
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/repo-conf/pacman-x86_64.conf
+++ b/repo-conf/pacman-x86_64.conf
@@ -74,12 +74,12 @@ CheckSpace
 [core]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
-Include = /etc/pacman.d/german-mirror
+Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
 [extra]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
-Include = /etc/pacman.d/german-mirror
+Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
 #[community-testing]
 #SigLevel = PackageRequired
@@ -88,7 +88,7 @@ Include = /etc/pacman.d/german-mirror
 [community]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
-Include = /etc/pacman.d/german-mirror
+Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
@@ -100,7 +100,7 @@ Include = /etc/pacman.d/german-mirror
 [multilib]
 SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
-Include = /etc/pacman.d/german-mirror
+Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
@@ -114,6 +114,3 @@ Server = http://repo.andrwe.org/$arch
 [seiichiro]
 Server = http://www.seiichiro0185.org/repo/$arch
 
-[repo-ck]
-SigLevel = PackageRequired
-Server = http://repo-ck.com/$arch
