no-update option & pacman-update
makerepopkg.sh: added option to skip chroot-update
pacman-*.conf: updated to new version of pacman

Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/repo-conf/pacman-i686.conf
+++ b/repo-conf/pacman-i686.conf
@@ -15,11 +15,10 @@
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
 HoldPkg     = pacman glibc
-# If upgrades are available for these packages they will be asked for first
-SyncFirst   = pacman
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
+#UseDelta    = 0.7
 Architecture = i686
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
@@ -31,14 +30,16 @@ Architecture = i686
 
 # Misc options
 #UseSyslog
-#UseDelta
+#Color
 #TotalDownload
 CheckSpace
 #VerbosePkgLists
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-#SigLevel = Optional TrustedOnly
+SigLevel    = Required DatabaseOptional
+LocalFileSigLevel = Optional
+#RemoteFileSigLevel = Required
 
 # NOTE: You must run `pacman-key --init` before first using pacman; the local
 # keyring can then be populated with the keys of all official Arch Linux
@@ -68,25 +69,20 @@ CheckSpace
 # after the header, and they will be used before the default mirrors.
 
 #[testing]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
-SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
 [extra]
-SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
 #[community-testing]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [community]
-SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 
@@ -94,11 +90,9 @@ Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 # enable the multilib repositories as required here.
 
 #[multilib-testing]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 #[multilib]
-#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
@@ -108,8 +102,10 @@ Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 #Server = file:///home/custompkgs
 
 [andrwe]
+SigLevel = Optional TrustAll
 Server = http://repo.andrwe.org/$arch
 
 [seiichiro]
+SigLevel = Optional TrustAll
 Server = http://www.seiichiro0185.org/repo/$arch
 
