- fix -Bp option
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/repo-conf/pacman-i686.conf
+++ b/repo-conf/pacman-i686.conf
@@ -11,7 +11,7 @@
 # If you wish to use different paths, uncomment and update the paths.
 #RootDir     = /
 #DBPath      = /var/lib/pacman/
-CacheDir    = /data/pacman-cache/pkg/
+CacheDir    = /data/pacman-cache/pkg/i686/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
 HoldPkg     = pacman glibc
