updated pacman configs
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/repo-conf/pacman-i686.conf
+++ b/repo-conf/pacman-i686.conf
@@ -14,6 +14,7 @@
 CacheDir    = /data/pacman-cache/pkg/i686/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
+#HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
@@ -101,11 +102,10 @@ Server = http://ftp5.gwdg.de/pub/linux/archlinux/$repo/os/$arch
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
+[seiichiro]
+SigLevel = Required DatabaseOptional TrustAll
+Server = http://www.seiichiro0185.org/repo/$arch
+
 [andrwe]
 SigLevel = Optional TrustAll
 Server = http://repo.andrwe.org/$arch
-
-[seiichiro]
-SigLevel = Optional TrustAll
-Server = http://www.seiichiro0185.org/repo/$arch
-
